# grapevine

./: Cargo.toml  README.MD  flake.nix
resources/: com.toasterrepair.Grapevine.desktop  grapevine.desktop
src/: coordinates.rs  data.rs  firehose.rs  global_affairs.rs  main.rs
