[package]
name = "grapevine"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { version = "0.10.1", package = "gtk4", features = ["v4_10"] }
libadwaita = { version = "0.8", features = ["v1_4"] }
libshumate = "0.7.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
urlencoding = "2.1"
open = "5.0"
chrono = "0.4"
chrono-tz = "0.10"
iana-time-zone = "0.1"
jetstream-oxide = "0.1.2"
atrium-api = "0.25"
anyhow = "1.0"
flume = "0.11"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
toml = "0.8"
futures-util = "0.3"
dirs = "5.0"
